--- a/e2e-builder.template.yaml
+++ b/e2e-builder.template.yaml
@@ -13,7 +13,7 @@ spec:
     name: e2e-builder
     env:
     - name: K8S_BRANCH
-      value: release-1.20
+      value: ${K8S_BRANCH}
     resources: {}
     volumeMounts:
     - name: k8s
